--- a/KNN_FROM_SCRATCH.ipynb
+++ b/KNN_FROM_SCRATCH.ipynb
@@ -148,23 +148,22 @@
     "        new_c_pos = dfg_c.drop('centroid',axis=1).values.tolist()\n",
     "        centroid_dictonary[centroid] = new_c_pos[0]\n",
     "    \n",
-    "    # compare if data points have switched centroid \n",
+    "    # compare if data points have switched centroid, repeat until no changes\n",
     "    list_of_next_centroid_assignments = list(df['centroid'])\n",
     "    if list_of_next_centroid_assignments == list_of_first_centroid_assignments:\n",
     "        print(\"CLUSTERING FINISHED\")\n",
     "        break\n",
     "    else:\n",
     "        list_of_first_centroid_assignments = list_of_next_centroid_assignments\n",
-    "        continue\n",
-    "        \n",
-    "    \n",
-    "    rep_n = rep_n + 1"
+    "        continue"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
